Exercise 2
Signed-off-by: Mina Fayez <MinaFayezN@gmail.com>