@@ -1,39 +1,37 @@
 package com.allendowney.thinkdast;
 
 //import static org.junit.Assert.*;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.fail;
-import static org.hamcrest.CoreMatchers.*;
+
+import org.junit.Before;
+import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 
-import org.junit.Before;
-import org.junit.Test;
+import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.CoreMatchers.is;
+import static org.junit.Assert.assertThat;
+import static org.junit.Assert.fail;
 
 /**
  * @author downey
- *
  */
 public class MyArrayListTest {
 
-	protected List<Integer> mylist;
+	protected List<Integer> myList;
 	protected List<Integer> list;
 
 
-	/**
-	 * @throws java.lang.Exception
-	 */
 	@Before
 	public void setUp() throws Exception {
-		list = new ArrayList<Integer>();
+		list = new ArrayList<>();
 		list.add(1);
 		list.add(2);
 		list.add(3);
 
-		mylist = new MyArrayList<Integer>();
-		mylist.addAll(list);
+		myList = new MyArrayList<>();
+		myList.addAll(list);
 	}
 
 	/**
@@ -41,7 +39,7 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testMyList() {
-		assertThat(mylist.size(), is(3));
+		assertThat(myList.size(), is(3));
 	}
 
 	/**
@@ -50,10 +48,10 @@ public class MyArrayListTest {
 	@Test
 	public void testAddT() {
 		for (int i = 4; i < 20; i++) {
-			mylist.add(i);
+			myList.add(i);
 		}
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(18), is(new Integer(19)));
+		assertThat(myList.get(18), is(19));
 	}
 
 	/**
@@ -61,40 +59,42 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testAddIntT() {
-		mylist.add(1, 5);
+		myList.add(1, 5);
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(1), is(new Integer(5)));
-		assertThat(mylist.size(), is(4));
+		assertThat(myList.get(1), is(5));
+		assertThat(myList.size(), is(4));
 
 		try {
-		    mylist.set(-1, 0);
-		    fail();
-		} catch (IndexOutOfBoundsException e) {} // good
+			myList.set(-1, 0);
+			fail();
+		} catch (IndexOutOfBoundsException ignored) {
+		} // good
 
 		try {
-		    mylist.set(4, 0);
-		    fail();
-		} catch (IndexOutOfBoundsException e) {} // good
+			myList.set(4, 0);
+			fail();
+		} catch (IndexOutOfBoundsException ignored) {
+		} // good
 
-		mylist.add(0, 6);
+		myList.add(0, 6);
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(0), is(6));
+		assertThat(myList.get(0), is(6));
 
-		mylist.add(5, 7);
+		myList.add(5, 7);
 		//System.out.println(Arrays.toString(mal.toArray()));
-		assertThat(mylist.get(5), is(new Integer(7)));
+		assertThat(myList.get(5), is(7));
 	}
 
 	/**
 	 * Test method for {@link MyArrayList#addAll(java.util.Collection)}.
 	 */
 	@Test
-	public void testAddAllCollectionOfQextendsT() {
-		mylist.addAll(list);
-		mylist.addAll(list);
-		mylist.addAll(list);
-		assertThat(mylist.size(), is(12));
-		assertThat(mylist.get(5), is(new Integer(3)));
+	public void testAddAllCollectionOfQExtendsT() {
+		myList.addAll(list);
+		myList.addAll(list);
+		myList.addAll(list);
+		assertThat(myList.size(), is(12));
+		assertThat(myList.get(5), is(3));
 	}
 
 	/**
@@ -102,8 +102,8 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testClear() {
-		mylist.clear();
-		assertThat(mylist.size(), is(0));
+		myList.clear();
+		assertThat(myList.size(), is(0));
 	}
 
 	/**
@@ -111,11 +111,11 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testContains() {
-		assertThat(mylist.contains(1), equalTo(true));
-		assertThat(mylist.contains(4), equalTo(false));
-		assertThat(mylist.contains(null), equalTo(false));
-		mylist.add(null);
-		assertThat(mylist.contains(null), equalTo(true));
+		assertThat(myList.contains(1), equalTo(true));
+		assertThat(myList.contains(4), equalTo(false));
+		assertThat(myList.contains(null), equalTo(false));
+		myList.add(null);
+		assertThat(myList.contains(null), equalTo(true));
 	}
 
 	/**
@@ -123,7 +123,7 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testContainsAll() {
-		assertThat(mylist.containsAll(list), equalTo(true));
+		assertThat(myList.containsAll(list), equalTo(true));
 	}
 
 	/**
@@ -131,7 +131,7 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testGet() {
-		assertThat(mylist.get(1), is(new Integer(2)));
+		assertThat(myList.get(1), is(2));
 	}
 
 	/**
@@ -139,10 +139,10 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testIndexOf() {
-		assertThat(mylist.indexOf(1), is(0));
-		assertThat(mylist.indexOf(2), is(1));
-		assertThat(mylist.indexOf(3), is(2));
-		assertThat(mylist.indexOf(4), is(-1));
+		assertThat(myList.indexOf(1), is(0));
+		assertThat(myList.indexOf(2), is(1));
+		assertThat(myList.indexOf(3), is(2));
+		assertThat(myList.indexOf(4), is(-1));
 	}
 
 	/**
@@ -150,9 +150,9 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testIndexOfNull() {
-		assertThat(mylist.indexOf(null), is(-1));
-		mylist.add(null);
-		assertThat(mylist.indexOf(null), is(3));
+		assertThat(myList.indexOf(null), is(-1));
+		myList.add(null);
+		assertThat(myList.indexOf(null), is(3));
 	}
 
 	/**
@@ -160,9 +160,9 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testIsEmpty() {
-		assertThat(mylist.isEmpty(), equalTo(false));
-		mylist.clear();
-		assertThat(mylist.isEmpty(), equalTo(true));
+		assertThat(myList.isEmpty(), equalTo(false));
+		myList.clear();
+		assertThat(myList.isEmpty(), equalTo(true));
 	}
 
 	/**
@@ -170,11 +170,11 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testIterator() {
-		Iterator<Integer> iter = mylist.iterator();
-		assertThat(iter.next(), is(new Integer(1)));
-		assertThat(iter.next(), is(new Integer(2)));
-		assertThat(iter.next(), is(new Integer(3)));
-		assertThat(iter.hasNext(), equalTo(false));
+		Iterator<Integer> iterator = myList.iterator();
+		assertThat(iterator.next(), is(1));
+		assertThat(iterator.next(), is(2));
+		assertThat(iterator.next(), is(3));
+		assertThat(iterator.hasNext(), equalTo(false));
 	}
 
 	/**
@@ -182,8 +182,8 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testLastIndexOf() {
-		mylist.add(2);
-		assertThat(mylist.lastIndexOf(new Integer(2)), is(3));
+		myList.add(2);
+		assertThat(myList.lastIndexOf(2), is(3));
 	}
 
 	/**
@@ -191,27 +191,27 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testRemoveObject() {
-		boolean flag = mylist.remove(new Integer(2));
+		boolean flag = myList.remove(Integer.valueOf(2));
 		assertThat(flag, equalTo(true));
-		assertThat(mylist.size(), is(2));
-		assertThat(mylist.get(1), is(new Integer(3)));
+		assertThat(myList.size(), is(2));
+		assertThat(myList.get(1), is(3));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
-		flag = mylist.remove(new Integer(1));
+		flag = myList.remove(Integer.valueOf(1));
 		assertThat(flag, equalTo(true));
-		assertThat(mylist.size(), is(1));
-		assertThat(mylist.get(0), is(new Integer(3)));
+		assertThat(myList.size(), is(1));
+		assertThat(myList.get(0), is(3));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
-		flag = mylist.remove(new Integer(5));
+		flag = myList.remove(Integer.valueOf(5));
 		assertThat(flag, equalTo(false));
-		assertThat(mylist.size(), is(1));
-		assertThat(mylist.get(0), is(new Integer(3)));
+		assertThat(myList.size(), is(1));
+		assertThat(myList.get(0), is(3));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
-		flag = mylist.remove(new Integer(3));
+		flag = myList.remove(Integer.valueOf(3));
 		assertThat(flag, equalTo(true));
-		assertThat(mylist.size(), is(0));
+		assertThat(myList.size(), is(0));
 		//System.out.println(Arrays.toString(mal.toArray()));
 	}
 
@@ -220,10 +220,10 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testRemoveInt() {
-		Integer val = mylist.remove(1);
-		assertThat(val, is(new Integer(2)));
-		assertThat(mylist.size(), is(2));
-		assertThat(mylist.get(1), is(new Integer(3)));
+		Integer val = myList.remove(1);
+		assertThat(val, is(2));
+		assertThat(myList.size(), is(2));
+		assertThat(myList.get(1), is(3));
 	}
 
 	/**
@@ -231,8 +231,8 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testRemoveAll() {
-		mylist.removeAll(list);
-		assertThat(mylist.size(), is(0));
+		myList.removeAll(list);
+		assertThat(myList.size(), is(0));
 	}
 
 	/**
@@ -240,39 +240,41 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testSet() {
-		Integer val = mylist.set(1, 5);
-		assertThat(val, is(new Integer(2)));
+		Integer val = myList.set(1, 5);
+		assertThat(val, is(2));
 
-		val = mylist.set(0, 6);
-		assertThat(val, is(new Integer(1)));
+		val = myList.set(0, 6);
+		assertThat(val, is(1));
 
-		val = mylist.set(2, 7);
-		assertThat(val, is(new Integer(3)));
+		val = myList.set(2, 7);
+		assertThat(val, is(3));
 
 		// return value should be 2
 		// list should be [6, 5, 7]
-		assertThat(mylist.get(0), is(new Integer(6)));
-		assertThat(mylist.get(1), is(new Integer(5)));
-		assertThat(mylist.get(2), is(new Integer(7)));
+		assertThat(myList.get(0), is(6));
+		assertThat(myList.get(1), is(5));
+		assertThat(myList.get(2), is(7));
 		//System.out.println(Arrays.toString(mal.toArray()));
 
 		try {
-		    mylist.set(-1, 0);
-		    fail();
-		} catch (IndexOutOfBoundsException e) {} // good
+			myList.set(-1, 0);
+			fail();
+		} catch (IndexOutOfBoundsException ignored) {
+		} // good
 
 		try {
-		    mylist.set(4, 0);
-		    fail();
-		} catch (IndexOutOfBoundsException e) {} // good
-}
+			myList.set(4, 0);
+			fail();
+		} catch (IndexOutOfBoundsException ignored) {
+		} // good
+	}
 
 	/**
 	 * Test method for {@link MyArrayList#size()}.
 	 */
 	@Test
 	public void testSize() {
-		assertThat(mylist.size(), is(3));
+		assertThat(myList.size(), is(3));
 	}
 
 	/**
@@ -280,9 +282,9 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testSubList() {
-		mylist.addAll(list);
-		List<Integer> sub = mylist.subList(1, 4);
-		assertThat(sub.get(1), is(new Integer(3)));
+		myList.addAll(list);
+		List<Integer> sub = myList.subList(1, 4);
+		assertThat(sub.get(1), is(3));
 	}
 
 	/**
@@ -290,8 +292,8 @@ public class MyArrayListTest {
 	 */
 	@Test
 	public void testToArray() {
-		Object[] array = mylist.toArray();
-		assertThat((Integer)array[0], is(new Integer(1)));
+		Object[] array = myList.toArray();
+		assertThat((Integer) array[0], is(1));
 	}
 
 }
